tests/NormalTests/paczka1/fuzzy1/94911132.err
Error in line 4: 11OevqYW7j A532 60,23
Error in line 9: LCC5R7U S932 53,4
Error in line 7: iuWvQ A532 62,4
Error in line 18: 5MV62EGv A195 20,8
Error in line 12: LCC5R7U A195 72,7
Error in line 29: A195 A229 43,2
Error in line 28: LCC5R7U A532 136,4
Error in line 37: 5MV62EGv S932 35,`
Error in line 11: 11OevqYW7j A532 255,1
Error in line 24: Seq8aH5h A229 51,6
